# finai-credit-os

./: .env.example  .gitignore  Makefile  Procfile  build.sh  docker-compose.yml  pyproject.toml  requirements-render.txt  requirements.txt
demo/: run.py
demo/scenarios/: borrower_profiles.py
frontend/: V0_SPEC.md
frontend/app/: package-lock.json  package.json
frontend/app/.config/nextjs-nodejs/: config.json
frontend/app/src/app/: globals.css  layout.tsx
frontend/app/src/app/analytics/: page.tsx
frontend/app/src/app/applications/[id]/: page.tsx
frontend/app/src/app/auth/login/: page.tsx
frontend/app/src/app/borrowers/[id]/: page.tsx
frontend/app/src/app/hitl-queue/: page.tsx
frontend/app/src/app/pipeline/: page.tsx
frontend/app/src/components/cards/: MetricCard.tsx  RiskBadge.tsx  SegmentBadge.tsx  StatusBadge.tsx
frontend/app/src/components/financial/: DBRGauge.tsx  IncomeTriangulationChart.tsx  MonospaceAmount.tsx
frontend/app/src/components/layout/: AppShell.tsx  Sidebar.tsx  StatsBar.tsx  TopBar.tsx
frontend/app/src/components/shared/: MockModeIndicator.tsx  ProvenanceBadge.tsx  TimeInQueue.tsx
frontend/app/src/lib/: api.ts  constants.ts  formatters.ts  types.ts
infra/docker/: init.sql
knowledge_garden/policies/: business_loan_msme.yaml  personal_loan_msme.yaml  personal_loan_salaried.yaml
src/finai/: __init__.py  config.py
src/finai/agents/: base.py
src/finai/agents/extraction/: agents.py
src/finai/agents/proposal/: agents.py
src/finai/api/: main.py
src/finai/api/routes/: applications.py  health.py  hitl.py
src/finai/core/: audit.py  commit.py  context.py  db.py  hitl.py  llm.py  memory.py  mock_llm.py  models.py  policy.py  state.py
src/finai/dpi/: mocks.py
src/finai/graphs/: los.py
tests/: conftest.py
tests/l1_unit/: test_commit.py  test_models.py  test_policy.py  test_proposal.py
